Minor translatations to greek.

--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -117,8 +117,6 @@
     </div>
 
 </div>
-<!-- Small modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Small modal</button>
 
 <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm">
@@ -129,10 +127,10 @@
 
             </div>
             <div class="modal-body text-center">
-                <span>Θα επικοινωνήσουμε μαζί σας σύντομα.</span>
+                <span>Η φόρμα σας έχει αποσταλεί με επιτυχία</span>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Κλείσιμο</button>
             </div>
         </div>
     </div>
