--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -19,7 +19,7 @@
 
 body {
     padding-top: 30px !important;
-    font-family: PFUniversal-Light, 'Roboto' !important;, sans-serif;
+    font-family: PFUniversal-Light,  sans-serif;
     font-weight: 900 !important;
     font-size: 2em !important;
     background: none;
@@ -135,7 +135,7 @@ a {
     position: relative !important;
     border: none !important;
     top: 8em !important;
-    font-family: PFUniversal-Light, 'Roboto' !important;, sans-serif;
+    font-family: PFUniversal-Light, sans-serif;
     color: black !important;
 }
 
